fix(pie-form-label): DSW-1274 ensure wraped text is on the bottom

--- a/packages/components/pie-form-label/src/form-label.scss
+++ b/packages/components/pie-form-label/src/form-label.scss
@@ -8,6 +8,7 @@
 
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
     gap: var(--dt-spacing-d);
     color: var(--form-label-color);
     font-size: var(--form-label-font-size);
